# django-snacks

./: README.md  db.sqlite3  pyproject.toml
snacks/: tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
snacks_project/: settings.py  urls.py
templates/: _base.html
